force-app/main/default/objects/Account/fields/Nurture__c.field-meta.xml
<CustomField>
    <fullName>Nurture__c</fullName>
    <label>Nurture</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Core - Hot</fullName>
            </value>
            <value>
                <fullName>Core - Warm</fullName>
            </value>
            <value>
                <fullName>Core - Cold</fullName>
            </value>
            <value>
                <fullName>THG - Hot</fullName>
            </value>
            <value>
                <fullName>THG - Warm</fullName>
            </value>
            <value>
                <fullName>THG - Cold</fullName>
            </value>
            <value>
                <fullName>THG ES - Hot</fullName>
            </value>
            <value>
                <fullName>THG ES - Warm</fullName>
            </value>
            <value>
                <fullName>THG ES - Cold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>