force-app/main/default/objects/Account/fields/Ongoing_Monitoring_Date_1_Year__c.field-meta.xml
<CustomField>
    <fullName>Ongoing_Monitoring_Date_1_Year__c</fullName>
    <formula>ADDMONTHS(Ongoing_Monitoring_Date__c ,12)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ongoing Monitoring Date + 1 Year</label>
    <type>Date</type>
</CustomField>