force-app/main/default/objects/Account/fields/Ongoing_Monitoring_Date__c.field-meta.xml
<CustomField>
    <fullName>Ongoing_Monitoring_Date__c</fullName>
    <label>Ongoing Monitoring Date</label>
    <type>Date</type>
</CustomField>