force-app/main/default/objects/Account/fields/Ongoing_Monitoring_is_Today_plus_7_days__c.field-meta.xml
<CustomField>
    <fullName>Ongoing_Monitoring_is_Today_plus_7_days__c</fullName>
    <formula>Ongoing_Monitoring_Date__c + 7 = today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ongoing Monitoring is Today plus 7 days?</label>
    <type>Checkbox</type>
</CustomField>