force-app/main/default/objects/Account/fields/Ongoing_Monitoring_Today__c.field-meta.xml
<CustomField>
    <fullName>Ongoing_Monitoring_Today__c</fullName>
    <formula>Ongoing_Monitoring_Date__c  = today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ongoing Monitoring Today?</label>
    <type>Checkbox</type>
</CustomField>