force-app/main/default/objects/Account/fields/Overseas_Registered_Number__c.field-meta.xml
<CustomField>
    <fullName>Overseas_Registered_Number__c</fullName>
    <label>Overseas Registered Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>