force-app/main/default/objects/Account/fields/Parent_Company_Companies_House_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_Company_Companies_House_Id__c</fullName>
    <label>Parent Company Companies House Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>