force-app/main/default/objects/Account/fields/People__c.field-meta.xml
<CustomField>
    <fullName>People__c</fullName>
    <defaultValue>false</defaultValue>
    <label>People</label>
    <type>Checkbox</type>
</CustomField>