force-app/main/default/objects/Account/fields/Preferences_Updated__c.field-meta.xml
<CustomField>
    <fullName>Preferences_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Preferences Updated</label>
    <type>Checkbox</type>
</CustomField>