force-app/main/default/objects/Account/fields/Project_Grants_Total_GBP__c.field-meta.xml
<CustomField>
    <fullName>Project_Grants_Total_GBP__c</fullName>
    <label>Project Grants Total GBP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>