force-app/main/default/objects/Account/fields/Registered_Office_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Registered_Office_Address_Line_1__c</fullName>
    <label>Registered Office Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>