force-app/main/default/objects/Account/fields/Research_And_Development__c.field-meta.xml
<CustomField>
    <fullName>Research_And_Development__c</fullName>
    <label>Research And Development</label>
    <length>255</length>
    <type>Text</type>
</CustomField>