force-app/main/default/objects/Account/fields/Sectors__c.field-meta.xml
<CustomField>
    <fullName>Sectors__c</fullName>
    <label>Sectors</label>
    <length>255</length>
    <type>Text</type>
</CustomField>