force-app/main/default/objects/Account/fields/Sharepoint_Public_Folder_URL__c.field-meta.xml
<CustomField>
    <fullName>Sharepoint_Public_Folder_URL__c</fullName>
    <label>Sharepoint Public Folder  URL</label>
    <type>Url</type>
</CustomField>