force-app/main/default/objects/Account/fields/Source_of_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Source_of_Engagement__c</fullName>
    <label>Source of Engagement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BD Prospect</fullName>
            </value>
            <value>
                <fullName>Client Referral</fullName>
            </value>
            <value>
                <fullName>Colleague Referral</fullName>
            </value>
            <value>
                <fullName>Cotent Piece, Event</fullName>
            </value>
            <value>
                <fullName>HUBCP CEvent</fullName>
            </value>
            <value>
                <fullName>Incoming Call</fullName>
            </value>
            <value>
                <fullName>Intermediary</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>Networking</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>Self Generated</fullName>
            </value>
            <value>
                <fullName>Service Line Referral</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>