force-app/main/default/objects/Account/fields/Stage_Of_Evolution_At_Date_Raised__c.field-meta.xml
<CustomField>
    <fullName>Stage_Of_Evolution_At_Date_Raised__c</fullName>
    <label>Stage Of Evolution At Date Raised</label>
    <type>Date</type>
</CustomField>