force-app/main/default/objects/Account/fields/Stage_Of_Evolution_At_Grant_Date__c.field-meta.xml
<CustomField>
    <fullName>Stage_Of_Evolution_At_Grant_Date__c</fullName>
    <label>Stage Of Evolution At Grant Date</label>
    <type>Date</type>
</CustomField>