force-app/main/default/objects/Account/fields/Stage_Of_Evolution_Transitions__c.field-meta.xml
<CustomField>
    <fullName>Stage_Of_Evolution_Transitions__c</fullName>
    <label>Stage Of Evolution Transitions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>