force-app/main/default/objects/Account/fields/Stake_Taken_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Stake_Taken_Percentage__c</fullName>
    <label>Stake Taken Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>