force-app/main/default/objects/Account/fields/Sub_Sector__c.field-meta.xml
<CustomField>
    <fullName>Sub_Sector__c</fullName>
    <label>Sub Sector - Technology</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adtech</fullName>
            </value>
            <value>
                <fullName>Cleantech</fullName>
            </value>
            <value>
                <fullName>Digital Security</fullName>
            </value>
            <value>
                <fullName>Edtech</fullName>
            </value>
            <value>
                <fullName>Event Tech</fullName>
            </value>
            <value>
                <fullName>Fintech</fullName>
            </value>
            <value>
                <fullName>HRtech</fullName>
            </value>
            <value>
                <fullName>Insurtech</fullName>
            </value>
            <value>
                <fullName>Medtech</fullName>
            </value>
            <value>
                <fullName>Proptech</fullName>
            </value>
            <value>
                <fullName>Regtech</fullName>
            </value>
            <value>
                <fullName>Saas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>