force-app/main/default/objects/Account/fields/Succession__c.field-meta.xml
<CustomField>
    <fullName>Succession__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Succession</label>
    <type>Checkbox</type>
</CustomField>