force-app/main/default/objects/Account/fields/Tax_Grading__c.field-meta.xml
<CustomField>
    <fullName>Tax_Grading__c</fullName>
    <label>Tax Grading</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>