force-app/main/default/objects/Account/fields/Top_Level_Industry_Groups__c.field-meta.xml
<CustomField>
    <fullName>Top_Level_Industry_Groups__c</fullName>
    <label>Top Level Industry Groups</label>
    <length>255</length>
    <type>Text</type>
</CustomField>