force-app/main/default/objects/Account/fields/Tracking_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Reasons__c</fullName>
    <label>Tracking Reasons</label>
    <length>255</length>
    <type>Text</type>
</CustomField>