force-app/main/default/objects/Account/fields/Trades_Internationally_Yes_or_No__c.field-meta.xml
<CustomField>
    <fullName>Trades_Internationally_Yes_or_No__c</fullName>
    <label>Trades Internationally?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>