force-app/main/default/objects/Account/fields/Valuation_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Valuation_Confidence__c</fullName>
    <label>Valuation Confidence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>