force-app/main/default/objects/Account/fields/Valuation_GBP__c.field-meta.xml
<CustomField>
    <fullName>Valuation_GBP__c</fullName>
    <label>Valuation GBP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>