force-app/main/default/objects/Account/recordTypes/cer_Customer.recordType-meta.xml
<RecordType>
    <fullName>cer_Customer</fullName>
    <active>false</active>
    <label>Customer</label>
</RecordType>