force-app/main/default/objects/Account/validationRules/Cooper_Parry_Account_must_be_Public.validationRule-meta.xml
<ValidationRule>
    <fullName>Cooper_Parry_Account_must_be_Public</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(CT_Account_access__c)  &lt;&gt; &apos;Public access&apos; &amp;&amp;
 Name = &apos;Cooper Parry&apos;</errorConditionFormula>
    <errorDisplayField>CT_Account_access__c</errorDisplayField>
    <errorMessage>Cooper Parry account must have Public access</errorMessage>
</ValidationRule>