force-app/main/default/objects/Account/validationRules/FFX_Lock_Account_Currency.validationRule-meta.xml
<ValidationRule>
    <fullName>FFX_Lock_Account_Currency</fullName>
    <active>true</active>
    <description>Stops modification of the Account Currency when Account is in use by FinancialForce.</description>
    <errorConditionFormula>AND(

ISCHANGED( CurrencyIsoCode ),

OR(

NOT( ISBLANK( c2g__CODAAccountsReceivableControl__c )),

NOT( ISBLANK( c2g__CODAAccountsPayableControl__c ))

)

)</errorConditionFormula>
    <errorDisplayField>CurrencyIsoCode</errorDisplayField>
    <errorMessage>This Account is in use by FinancialForce Accounting. You cannot change its currency.</errorMessage>
</ValidationRule>