force-app/main/default/objects/Account/validationRules/V4_Audit_Category_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>V4_Audit_Category_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT($Setup.Org_Wide_Settings__c.Disable_Validation_Rules__c),
Audit_Client__c = TRUE,
TEXT(Type ) = &quot;Client&quot;,
ISBLANK( Audit_Categories__c ))</errorConditionFormula>
    <errorDisplayField>Audit_Categories__c</errorDisplayField>
    <errorMessage>Audit Category is required when account is an audit client.</errorMessage>
</ValidationRule>