force-app/main/default/objects/Account/validationRules/V6_RegisteredNumberRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>V6_RegisteredNumberRequired</fullName>
    <active>false</active>
    <description>Disabled - as we have V5 which does the same thing and also prevents firing when it&apos;s a Person Account.</description>
    <errorConditionFormula>AND(
NOT($Setup.Org_Wide_Settings__c.Disable_Validation_Rules__c),
ISBLANK( Beauhurst_ID__c),
TEXT(Type_of_Business__c) &lt;&gt; &apos;Not For Profit&apos;,
TEXT(Type_of_Business__c) &lt;&gt; &apos;Pension Scheme&apos;
)</errorConditionFormula>
    <errorDisplayField>Beauhurst_ID__c</errorDisplayField>
    <errorMessage>Please enter a Registered Number</errorMessage>
</ValidationRule>