force-app/main/default/objects/Account/listViews/Beauhurst_List.listView-meta.xml
<ListView>
    <fullName>Beauhurst_List</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>Beauhurst List</label>
</ListView>