force-app/main/default/objects/Account/listViews/ffaws__Customer_Accounts.listView-meta.xml
<ListView>
    <fullName>ffaws__Customer_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>c2g__CODAInvoiceEmail__c</columns>
    <columns>c2g__CODAPaymentMethod__c</columns>
    <columns>c2g__CODAAccountTradingCurrency__c</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>c2g__CODACreditStatus__c</columns>
    <columns>c2g__CODACreditLimitEnabled__c</columns>
    <columns>c2g__CODACreditLimit__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>c2g__CODAAccountsReceivableControl__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Customer Accounts</label>
</ListView>